--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
 		"@huggingface/inference": "^4.13.5",
 		"date-fns": "^4.1.0",
 		"lucide-react": "^0.561.0",
-		"pdf-parse": "^2.4.5",
-		"pdfjs-dist": "^5.4.449",
+		"pdfjs-serverless": "^1.1.0",
 		"react": "^19.1.1",
 		"react-dom": "^19.1.1",
 		"react-hot-toast": "^2.6.0"
