--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
 		"pdfjs-serverless": "^1.1.0",
 		"react": "^19.1.1",
 		"react-dom": "^19.1.1",
-		"react-hot-toast": "^2.6.0"
+		"react-hot-toast": "^2.6.0",
+		"react-router-dom": "^7.11.0"
 	},
 	"devDependencies": {
 		"@cloudflare/vite-plugin": "^1.18.0",
