--- a/wrangler.toml
+++ b/wrangler.toml
@@ -3,6 +3,10 @@ main = "worker/index.js"
 compatibility_date = "2024-12-01"
 compatibility_flags = ["nodejs_compat"]
 
+[assets]
+directory = "./dist/client"
+not_found_handling = "single-page-application"
+
 [observability]
 enabled = false
 head_sampling_rate = 1
