--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
 		"dev": "vite",
 		"dev:worker": "wrangler dev",
 		"dev:full": "npm run build:pages && wrangler dev",
-		"build": "vite build",
-		"build:worker": "vite build --config vite.config.js",
-		"build:pages": "vite build --config vite.config.pages.js",
+		"build": "npm run copy-logo && vite build",
+		"build:worker": "npm run copy-logo && vite build --config vite.config.js",
+		"build:pages": "npm run copy-logo && vite build --config vite.config.pages.js",
+		"copy-logo": "cp logo.svg public/logo.svg || true",
 		"lint": "eslint .",
 		"preview": "npm run build && vite preview",
 		"deploy": "npm run build:worker && wrangler deploy",
